--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <header class="header">
         <div class="header-item">
             <img src="./assets/logo/uzlogo_white.png" alt="">
-            <a href="#" class="logo">O‘zbekiston Respublikasi Ekologiya,<br>
-                atrof-muhitni muhofaza qilish va iqlim o‘zgarishi <br>
+            <a href="#" class="logo">O‘zbekiston Respublikasi Ekologiya,
+                atrof-muhitni muhofaza qilish va iqlim o‘zgarishi
                 vazirligi huzuridagi Turizm qo‘mitasi</a>
         </div>
         <nav class="navbar">
