--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     </div>
     <section class="home">
       <div class="home-content"></div>
+      <img class="home-wave" src="assets/background/wave.png" alt="image">
     </section>
     <section class="news">
       <div class="new">
