--- a/index.html
+++ b/index.html
@@ -118,11 +118,8 @@
       <div class="welcome-section-item">
         <div class="welcome-section-textBx">
           <h1>QO'QON SHAHRIGA XUSH KELIBSIZ!</h1>
-          <p>Qo‘qon shahri - Buyuk Ipak yo‘lidagi eng qadimiy shahar. <br><br> Shahar hashamatli yodgorliklarga va
-            ulug‘vor madrasalarga boy va bu ajablanarli emas, chunki Qo‘qon ilm-fan rivojlanishining markazi edi.
-            Qo‘qonni
-            Markaziy Osiyoning eng qadimiy shaharlaridan biri deb aytish mumkin. Uning alohida shahar sifatida birinchi
-            marta qayd etilishi uzoq X asrga borib taqaladi.
+          <p>Qoʻqon — Oʻzbekiston Respublikasi shahar. Soʻx daryosining (tarmogʻi) quyi oqimida joylashgan. Aholisi — 310716 nafar (2020-yil). Qoʻqon xonligining poytaxti boʻlgan. Bu shahar Fargʻona viloyatining yirik shaharlaridan biridir.
+            Mahalliy tarixchi va arxeologlar orasida shaharning yoshi 2 ming yildan ziyod degan taxmin mavjud. Qoʻqonga oid dastlabki maʼlumotlar 10-asr yozma manbalarida uchraydi. Etimologiyasi haqida turli taxminlar bor [masalan, Istaxriy va Ibn Havqal asarlarida „Havokand“ (Hoʻkand) shaklida, yaʼni „goʻzal“, „yoqimli“ yoki „shamol shahri“ maʼnosida uchraydi]. Keyingi asrlarda „Hoʻqandi latif“ degan atama ham ishlatilgan. Undan tashqari „balandlikdagi shahar“, „hular shahri“ [yaʼni, „hu (ku) qabilasi — elati shahri“] versiyalari ham bor. Qadimiy Xitoy qoʻlyozmalarida Qoʻqon nomi „Guyshan“, „Xoʻxan“ tarzida ifodalangan.
           </p>
           <button class="welcome-section-btn">Batafsil</button>
         </div>
