--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.2-web/css/all.min.css"
     rel="stylesheet" />
     <link rel="stylesheet" href="bg.css">
+    <link rel="stylesheet" href="food.css">
 </head>
 
 <body>
@@ -260,14 +261,14 @@
             </div>
             <div class="media-left-slide">
               <div class="media-left-slide-item">
-                <img src="./assets/photos/slide_img1.jpg" alt="i" />
-                <img src="./assets/photos/slide_img2.jpg" alt="i" />
-                <img src="./assets/photos/slide_img3.jpg" alt="i" />
-                <img src="./assets/photos/slide_img4.jpg" alt="i" />
-                <img src="./assets/photos/slide_img5.jpg" alt="i" />
-                <img src="./assets/photos/slide_img6.jpg" alt="i" />
-                <img src="./assets/photos/slide_img7.jpg" alt="i" />
-                <img src="./assets/photos/slide_img8.jpg" alt="i" />
+                <img src="./assets/photos/slide/photo_2024-05-26_14-36-14.jpg" alt="i" />
+                <img src="./assets/photos/slide/slide2.jpg" alt="i" />
+                <img src="./assets/photos/slide/slide 3.jpg" alt="i" />
+                <img src="./assets/photos/slide/slide 4.jpg" alt="i" />
+                <img src="./assets/photos/news_new_photos/img1.jpg" alt="i" />
+                <img src="./assets/photos/news_new_photos/img2.jpg" alt="i" />
+                <img src="./assets/photos/news_new_photos/img3.jpg" alt="i" />
+                <img src="./assets/photos/news_new_photos/img5.jpg" alt="i" />
               </div>
             </div>
           </div>
@@ -386,11 +387,101 @@
     </div>
   </div>
   <!-- MAP Section -->
-  <div class="map-section">
-    <div class="map-section-title">
-      <h4>Hududiy Boshqarmalar</h4>
+  <div class="food-sections">
+    <div class="container">
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/somsa.jpg" alt="NFT" />
+      <h2>Soms</h2>
+      <p class='food-description'>Qaynoqqina tandirdan uzilgan so'msa hohlovchilar uchun</p>
+      <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
     </div>
   </div>
+
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/kabob.jpg" alt="NFT" />
+      <h2>Kabob</h2>
+      <p class='food-description'>Kabob husg ko'ruchilar uchun</p>
+      <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/shavla-6.jpg" alt="NFT" />
+      <h2>Sho'vla</h2>
+      <p class='food-description'>O'zgacha tam hohlovchilarga</p>
+            <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/uzbek-chuchvara-soup-with-dumpling-traditional-dish-in-central-asia-2F3HC99.jpg" alt="NFT" />
+      <h2>Chuchvara</h2>
+      <p class='food-description'>Hamirli ovqatni hush koruvchilarga</p>
+           <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
+    </div>
+  </div> 
+
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/palov.jpg" alt="NFT" />
+      <h2>Palov</h2>
+      <p class='food-description'>Ko'p sonli mehmonlar uchun</p>
+      <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-nft">
+    <div class='food-main'>
+      <img class='food-tokenImage' src="assets/food/spicy-uzbek-mastava-soup-lamb-rice-vegetables-close-up-bowl-served-bread-sour-milk-vertical-top-view-wooden-tray-247338582.webp" alt="NFT" />
+      <h2>Mastava</h2>
+      <p class='food-description'>Nozik didli mehmonlar uchun</p>
+           <hr />
+      <div class='food-creator'>
+        <div class='food-wrapper'>
+          <img src="assets/background/Untitled.png" alt="Creator" />
+        </div>
+        <p><ins>Our national</ins> Foods</p>
+      </div>
+    </div>
+  </div>
+
+  
+</div>
+</div>
 
   <!-- Footer -->
   <div class="footer">
