--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tourism</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -172,13 +169,13 @@
     </div>
     <div class="home">
       <div class="home-content"></div>
-      <img class="home-wave" src="assets/background/wave.png" alt="image" />
+      <!-- <img class="home-wave" src="assets/background/wave.png" alt="image" /> -->
     </div>
     <div class="welcome-section">
       <div class="container">
         <div class="welcome-section-item">
           <div class="welcome-section-textBx">
-            <h1>QO'QON SHAHRIGA XUSH KELIBSIZ!</h1>
+            <h1>QO'QON SHAHRIGA XUSH KELIBSIZ !</h1>
             <p>
               Qoʻqon — Oʻzbekiston Respublikasi shahar. Soʻx daryosining
               (tarmogʻi) quyi oqimida joylashgan. Aholisi — 310716 nafar
@@ -324,7 +321,7 @@
 
     <div class="news">
       <div class="new">
-        <h1>YANGILIKLAR</h1>
+        <h4>YANGILIKLAR</h4>
         <img src="./assets/photos/line-break-10.svg" alt="underline_photo" />
       </div>
       <div class="container">
