--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tourism</title>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css" />
+  <link rel="icon" href="./assets/logo/icon.png">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="./bg.css" />
   <link rel="stylesheet" href="./food.css" />
@@ -52,7 +53,7 @@
     </div>
     <nav class="navbar">
       <a href="#" class="active">Bosh sahifa</a>
-      <a href="#">Qo'mita</a>
+      <a href="./pages/page1.html">Qo'mita</a>
       <a href="#">Qonunchilik</a>
       <a href="#">Matbuot xizmati</a>
       <a href="#">Xizmatlar</a>
@@ -548,32 +549,32 @@
           <div class="place-card">
             <img src="./assets/photos/places/photo1.jpg" alt="" />
             <h3>Dahmai shohon</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
           <div class="place-card">
             <img src="./assets/photos/places/photo2.jpg" alt="" />
             <h3>Jome' masjid</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
           <div class="place-card">
             <img src="./assets/photos/places/photo3.jpg" alt="" />
             <h3>Xudoyorxon o'rdasi</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
           <div class="place-card">
             <img src="./assets/photos/places/photo4.jpg" alt="" />
             <h3>Kamol qori madrasasi</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
           <div class="place-card">
             <img src="./assets/photos/places/photo5.jpg" alt="" />
             <h3>Norbo'tabiy madrasasi</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
           <div class="place-card">
             <img src="./assets/photos/places/photo6.jpg" alt="" />
             <h3>Miyon Xazrat madrasasi</h3>
-            <button class="button2">Hover me</button>
+            <button class="button2">Batafsil</button>
           </div>
         </div>
       </div>
@@ -796,38 +797,7 @@
     </div>
   </div>
 
-  <!-- owl carousel -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
-    $(".owl-carousel").owlCarousel({
-      loop: true,
-      margin: 20,
-      autoplay: true,
-      // autoplayTimeout: 00,
-      stagepadding: 50,
-      nav: false,
-      dots: false,
-      responsive: {
-        0: {
-          items: 1,
-        },
-        600: {
-          items: 3,
-        },
-        1000: {
-          items: 1,
-        },
-        1400: {
-          items: 1,
-        },
-      },
-    });
-  </script>
+  
   <script src="./script.js"></script>
 </body>
 
