--- a/pages/page1.html
+++ b/pages/page1.html
@@ -72,7 +72,7 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
             <div>
-                <img src="assets/logo/icon.png" alt="image" />
+                <img src="../assets/logo/icon.png" alt="image" />
                 <p>
                     O‘zbekiston Respublikasi Ekologiya, atrof-muhitni muhofaza qilish va
                     iqlim o‘zgarishi vazirligi huzuridagi Turizm qo‘mitasi
@@ -80,8 +80,21 @@
             </div>
         </div>
     </div>
-    <div class="home">
-        <div class="home-content"></div>
+    <div class="page-home">
+        <div class="container">
+            <div class="page-home-item">
+                <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
+                <h1>Qo'mita</h1>
+                <p>~ Qo'qon Turizmning Qo'mita sahifasiga xush kelibsiz. Bizning maxsus qo‘mitamiz Qo‘qonda turizmni
+                    rivojlantirish va rivojlantirishga bel bog‘lagan tajribali mutaxassislardan iborat. Bizning
+                    tashabbuslarimizni boshqarayotgan va faol hamjamiyatimizda turizm kelajagini shakllantirayotgan
+                    shaxslar bilan tanishing.</p>
+                <h2>Qo'mita a'zolari</h2>
+                <li>Rais: Baxtiyor Umarov</li>
+                <li>Rais O'rinbosari: Jamshid Abdusalomov</li>
+                <li>Kotib: Lola Rahmonboyeva</li>
+            </div>
+        </div>
     </div>
     <!-- Footer -->
     <div class="footer">
