--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <nav class="navbar">
       <a href="#" class="active">Bosh sahifa</a>
       <a href="./pages/page1.html">Qo'mita</a>
-      <a href="#">Qonunchilik</a>
-      <a href="#">Matbuot xizmati</a>
-      <a href="#">Xizmatlar</a>
-      <a href="#">Tadqiqotlar</a>
-      <a href="#">Imtiyozlar</a>
+      <a href="./pages/page2.html">Qonunchilik</a>
+      <a href="./pages/page3.html">Matbuot xizmati</a>
+      <a href="./pages/page4.html">Xizmatlar</a>
+      <a href="./pages/page5.html">Tadqiqotlar</a>
+      <a href="./pages/page6.html">Imtiyozlar</a>
     </nav>
   </div>
   <div class="second-header">
@@ -797,7 +797,7 @@
     </div>
   </div>
 
-  
+
   <script src="./script.js"></script>
 </body>
 
