--- a/pages/page2.html
+++ b/pages/page2.html
@@ -21,8 +21,8 @@
         </div>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html" class="active">Qo'mita</a>
-            <a href="./page2.html">Qonunchilik</a>
+            <a href="./page1.html">Qo'mita</a>
+            <a href="./page2.html" class="active">Qonunchilik</a>
             <a href="./page3.html">Matbuot xizmati</a>
             <a href="./page4.html">Xizmatlar</a>
             <a href="./page5.html">Tadqiqotlar</a>
@@ -42,23 +42,23 @@
                 <p>Qo'mita</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page2.html" class="header-menu-item">
+            <a href="#" class="header-menu-item">
                 <p>Qonunchilik</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page3.html" class="header-menu-item">
+            <a href="#" class="header-menu-item">
                 <p>Matbuot xizmati</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page4.html" class="header-menu-item">
+            <a href="#" class="header-menu-item">
                 <p>Xizmatlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page5.html" class="header-menu-item">
+            <a href="#" class="header-menu-item">
                 <p>Tadqiqotlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
-            <a href="./page6.html" class="header-menu-item">
+            <a href="#" class="header-menu-item">
                 <p>Imtiyozlar</p>
                 <i class="fa-solid fa-chevron-right"></i>
             </a>
@@ -84,12 +84,12 @@
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Qo'mita</h1>
+                <h1>Qonunchilik</h1>
                 <p>~ Qo'qon Turizmning Qo'mita sahifasiga xush kelibsiz. Bizning maxsus qo‘mitamiz Qo‘qonda turizmni
                     rivojlantirish va rivojlantirishga bel bog‘lagan tajribali mutaxassislardan iborat. Bizning
                     tashabbuslarimizni boshqarayotgan va faol hamjamiyatimizda turizm kelajagini shakllantirayotgan
                     shaxslar bilan tanishing.</p>
-                <h2>Qo'mita a'zolari</h2>
+                <h2>Qonunchilik a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
                 <li>Rais O'rinbosari: Jamshid Abdusalomov</li>
                 <li>Kotib: Lola Rahmonboyeva</li>
