--- a/pages/page4.html
+++ b/pages/page4.html
@@ -21,10 +21,10 @@
         </div>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
-            <a href="./page1.html" class="active">Qo'mita</a>
+            <a href="./page1.html">Qo'mita</a>
             <a href="./page2.html">Qonunchilik</a>
             <a href="./page3.html">Matbuot xizmati</a>
-            <a href="./page4.html">Xizmatlar</a>
+            <a href="./page4.html" class="active">Xizmatlar</a>
             <a href="./page5.html">Tadqiqotlar</a>
             <a href="./page6.html">Imtiyozlar</a>
         </nav>
@@ -84,12 +84,12 @@
         <div class="container">
             <div class="page-home-item">
                 <a class="to-home" href="../index.html"><i class="fa-regular fa-left-from-line"></i></a>
-                <h1>Qo'mita</h1>
-                <p>~ Qo'qon Turizmning Qo'mita sahifasiga xush kelibsiz. Bizning maxsus qo‘mitamiz Qo‘qonda turizmni
+                <h1>Xizmatlar</h1>
+                <p>~ Qo'qon Turizmning Xizmatlar sahifasiga xush kelibsiz. Bizning maxsus qo‘mitamiz Qo‘qonda turizmni
                     rivojlantirish va rivojlantirishga bel bog‘lagan tajribali mutaxassislardan iborat. Bizning
                     tashabbuslarimizni boshqarayotgan va faol hamjamiyatimizda turizm kelajagini shakllantirayotgan
                     shaxslar bilan tanishing.</p>
-                <h2>Qo'mita a'zolari</h2>
+                <h2>Xizmatlar bo'limi a'zolari</h2>
                 <li>Rais: Baxtiyor Umarov</li>
                 <li>Rais O'rinbosari: Jamshid Abdusalomov</li>
                 <li>Kotib: Lola Rahmonboyeva</li>
