--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
       <a href="#" class="header-menu-item">
         <p>Bosh sahifa</p>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page1.html" class="header-menu-item">
         <p>Qo'mita</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page2.html" class="header-menu-item">
         <p>Qonunchilik</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page3.html" class="header-menu-item">
         <p>Matbuot xizmati</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page4.html" class="header-menu-item">
         <p>Xizmatlar</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page5.html" class="header-menu-item">
         <p>Tadqiqotlar</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
-      <a href="#" class="header-menu-item">
+      <a href="./pages/page6.html" class="header-menu-item">
         <p>Imtiyozlar</p>
         <i class="fa-solid fa-chevron-right"></i>
       </a>
