--- a/pages/page2.html
+++ b/pages/page2.html
@@ -14,11 +14,11 @@
 <body>
     <div class="to-top"><i class="fa-solid fa-chevron-up"></i></div>
     <div class="header">
-        <div class="header-item">
+        <a href="../index.html" class="header-item">
             <img src="../assets/logo/Резервная_копия_fer 1.png" alt="" />
-            <a href="#" class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
-                viloyati Turizm va madaniy meros bosh boshqarmasi.</a>
-        </div>
+            <p class="logo">O‘zbekiston Respublikasi Turizm va madaniy meros vazirligi, Farg‘ona
+                viloyati Turizm va madaniy meros bosh boshqarmasi.</p>
+        </a>
         <nav class="navbar">
             <a href="../index.html">Bosh sahifa</a>
             <a href="./page1.html">Qo'mita</a>
