--- a/index.html
+++ b/index.html
@@ -454,41 +454,49 @@
     </div>
     <div class="container">
       <div class="news-container">
-        <div class="news-container-item">
-          <div class="imgBx">
-            <img src="./assets/photos/news_new_photos/img1.jpg" alt="image" />
+        <div class="news-container-items">
+          <div class="news-container-item">
+            <div class="imgBx">
+              <img src="./assets/photos/news_new_photos/img1.jpg" alt="image" />
+            </div>
+            <p>
+              Xiva – 2024-yilda Islom hamkorlik tashkilotining turizm shahri
+            </p>
           </div>
-          <p>
-            Xiva – 2024-yilda Islom hamkorlik tashkilotining turizm shahri
-          </p>
-        </div>
-        <div class="news-container-item is-up">
-          <div class="imgBx">
-            <img src="./assets/photos/news_new_photos/img2.jpg" alt="image" />
+          <div class="news-container-item is-up">
+            <div class="imgBx">
+              <img src="./assets/photos/news_new_photos/img2.jpg" alt="image" />
+            </div>
+            <p>O‘zbekiston turizm salohiyati Quvaytda taqdim etildi</p>
           </div>
-          <p>O‘zbekiston turizm salohiyati Quvaytda taqdim etildi</p>
-        </div>
-        <div class="news-container-item">
-          <div class="imgBx">
-            <img src="./assets/photos/news_new_photos/img3.jpg" alt="image" />
+          <div class="news-container-item">
+            <div class="imgBx">
+              <img src="./assets/photos/news_new_photos/img3.jpg" alt="image" />
+            </div>
+            <p>Jahon kubogi oldidan matbuot anjumani o‘tkazildi</p>
           </div>
-          <p>Jahon kubogi oldidan matbuot anjumani o‘tkazildi</p>
-        </div>
-        <div class="news-container-item">
-          <div class="imgBx">
-            <img src="./assets/photos/news_new_photos/img4.jpg" alt="image" />
+          <div class="news-container-item">
+            <div class="imgBx">
+              <img src="./assets/photos/news_new_photos/img4.jpg" alt="image" />
+            </div>
+            <p>Namanganda 63-xalqaro gullar festivali bo‘lib o‘tadi</p>
           </div>
-          <p>Namanganda 63-xalqaro gullar festivali bo‘lib o‘tadi</p>
-        </div>
-        <div class="news-container-item is-up">
-          <div class="imgBx">
-            <img src="./assets/photos/news_new_photos/img5.jpg" alt="image" />
+          <div class="news-container-item is-up">
+            <div class="imgBx">
+              <img src="./assets/photos/news_new_photos/img5.jpg" alt="image" />
+            </div>
+            <p>
+              OAV vakillari uchun Zomin tumani sayyohlik obyektlari bo‘ylab
+              press-tur o‘tkazildi
+            </p>
           </div>
-          <p>
-            OAV vakillari uchun Zomin tumani sayyohlik obyektlari bo‘ylab
-            press-tur o‘tkazildi
-          </p>
         </div>
+        <button class="news-container-button">
+          <span class="transition"></span>
+          <span class="gradient"></span>
+          <span class="label">Batafsil</span>
+        </button>
+
       </div>
     </div>
   </div>
