--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="./bg.css" />
   <link rel="stylesheet" href="./food.css" />
+  <link rel="stylesheet" href="place.css">
 </head>
 
 <body>
@@ -549,45 +550,125 @@
       </div>
     </div>
   </div>
-  <div class="places-section">
-    <div class="container">
-      <div class="places-section-item">
-        <h1>Shaxrimizning diqqatga sazovor joylari !</h1>
-        <div class="place-cards">
-          <div class="place-card">
-            <img src="./assets/photos/places/photo1.jpg" alt="" />
-            <h3>Dahmai shohon</h3>
-            <button class="button2">Batafsil</button>
+<!-- media section end -->
+
+
+<!-- place section start -->
+
+<div class="places-sections">
+  <div class="container">
+    <div class="places-section-item">
+      <div class="places-section-item-title">
+        <h4>Qo'qon shaxrining diqqatga sazovor joylari</h4>
+      </div>
+      <div class="places-cards">
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo1.jpg" alt="NFT" />
+            <h2>Dahmai shohon</h2>
+            <a href="pages/places1.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+            </div>
           </div>
-          <div class="place-card">
-            <img src="./assets/photos/places/photo2.jpg" alt="" />
-            <h3>Jome' masjid</h3>
-            <button class="button2">Batafsil</button>
+        </div>
+
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo2.jpg" alt="NFT" />
+            <h2>Jome' masjid</h2>
+            <a href="pages/place2.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+            </div>
           </div>
-          <div class="place-card">
-            <img src="./assets/photos/places/photo3.jpg" alt="" />
-            <h3>Xudoyorxon o'rdasi</h3>
-            <button class="button2">Batafsil</button>
+        </div>
+
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo3.jpg" alt="NFT" />
+            <h2>Xudoyorxon o'rdasi</h2>
+            <a href="pages/place3.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins></p>
+            </div>
           </div>
-          <div class="place-card">
-            <img src="./assets/photos/places/photo4.jpg" alt="" />
-            <h3>Kamol qori madrasasi</h3>
-            <button class="button2">Batafsil</button>
+        </div>
+
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo4.jpg" alt="NFT" />
+            <h2>Norbo'tabiy madrasasi</h2>
+            <a href="pages/place4.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+            </div>
           </div>
-          <div class="place-card">
-            <img src="./assets/photos/places/photo5.jpg" alt="" />
-            <h3>Norbo'tabiy madrasasi</h3>
-            <button class="button2">Batafsil</button>
+        </div>
+
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo5.jpg" alt="NFT" />
+            <h2>Kamol qozi madrasasi</h2>
+            <a href="pages/place5.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+            </div>
           </div>
-          <div class="place-card">
-            <img src="./assets/photos/places/photo6.jpg" alt="" />
-            <h3>Miyon Xazrat madrasasi</h3>
-            <button class="button2">Batafsil</button>
+        </div>
+
+        <div class="places-nft">
+          <div class="places-main">
+            <img class="places-tokenImage" src="assets/photos/places/photo6.jpg" alt="NFT" />
+            <h2>Miyon Xazrat madrasasi</h2>
+            <a href="pages/place6.html">
+              <button class="button2">Batafsil</button>
+            </a>
+            <hr />
+            <div class="places-creator">
+              <div class="places-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Diqqatga Sazovor Joylar</ins> </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+        <!-- place section end -->
   <!-- Statistics -->
   <div class="statistics">
     <div class="statistics-bg"></div>
